# tesserae-device-firmware

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  partitions_4m.csv  partitions_e1004_ota.csv  partitions_ota.csv  platformio.ini  sdkconfig 2.seeed-ee04-73e6  sdkconfig 2.seeed-reterminal-e1002  sdkconfig 2.seeed-reterminal-e1003  sdkconfig 2.waveshare-133e6  sdkconfig 2.waveshare-photopainter-73  sdkconfig 3.seeed-reterminal-e1001  sdkconfig.defaults  sdkconfig.e1004-ota.defaults  sdkconfig.ee02.defaults  sdkconfig.ota.defaults  sdkconfig.usbjtag.defaults
.github/workflows/: build.yml  firmware.yml  release.yml
boards/: board.h  seeed_ee02.h  seeed_ee04_73e6.h  seeed_ee04_75.h  seeed_reterminal_e1001.h  seeed_reterminal_e1001_gray.h  seeed_reterminal_e1002.h  seeed_reterminal_e1003.h  seeed_reterminal_e1004.h  seeed_xiao_epaper_75.h  seeed_xiao_epaper_75_bwr.h  waveshare_133e6.h  waveshare_photopainter_73.h
include/: app_config.h  buttons.h  secrets.example.h
src/: CMakeLists.txt  battery.c  battery.h  button_report.c  button_report.h  deck.c  deck.h  deck_cache.c  deck_cache.h  deck_digest.c  deck_run.c  deck_run.h  epd_driver.c  epd_driver.h  heartbeat.c  heartbeat.h  i2c_bus.c  i2c_bus.h  image_fetcher.c  image_fetcher.h  main.c  mqtt_handler.c  mqtt_handler.h  net_rest.c  net_rest.h  ota_boot.c  ota_boot.h  ota_install.c  ota_install.h  ota_manifest.c  ota_manifest.h  ota_report.c  ota_report.h  ota_verify.c  ota_verify.h  overlay.c  overlay.h  overlay_run.c  overlay_run.h  pmic.c  (+23 more)
src/panel/: epd_panel.h  registry.c
src/panel/drivers/: it8951_gray.c  it8951_gray.h  mono_spi.c  mono_spi.h  spectra6_spi_dual.c  spectra6_spi_dual.h  spectra6_spi_single.c  spectra6_spi_single.h  spectra6_t133a01_dual.c  spectra6_t133a01_dual.h
test/: README  test_button_report.c  test_deck.c  test_ota_verify.c  test_overlay.c  test_touch_coords.c
tools/: build_catalog.py  gen_splash.py  release.sh  test_deck.sh  test_ota_verify.sh  test_overlay.sh
