idf_component_register(
    SRCS
        "main.c"
        "epd_driver.c"
        "panel/registry.c"
        "panel/drivers/spectra6_spi_dual.c"
        "panel/drivers/spectra6_t133a01_dual.c"
        "battery.c"
        "wifi_manager.c"
        "provisioning.c"
        "net_rest.c"
        "rest_config.c"
        "image_fetcher.c"
        "image_decoder.c"
        "splash.c"
    INCLUDE_DIRS
        "."
        "panel"
        "../boards"
        "../include"
    EMBED_FILES
        "../assets/splash_logo.bin"
        "../assets/splash_portal.bin"
    REQUIRES
        driver
        esp_adc
        esp_driver_usb_serial_jtag
        esp_event
        esp_http_client
        esp_http_server
        esp_netif
        esp_wifi
        esp-tls
        json
        nvs_flash
        mbedtls
        lwip
        mdns
)
