idf_component_register(
    SRCS
        "main.c"
        "epd_driver.c"
        "panel/registry.c"
        "panel/drivers/spectra6_spi_dual.c"
        "panel/drivers/spectra6_t133a01_dual.c"
        "panel/drivers/spectra6_spi_single.c"
        "panel/drivers/mono_spi.c"
        "panel/drivers/it8951_gray.c"
        "battery.c"
        "pmic.c"
        "sht4x.c"
        "shtc3.c"
        "i2c_bus.c"
        "touch_coords.c"
        "touch_gt911.c"
        "touch_queue.c"
        "touch_wakestub.c"
        "wifi_manager.c"
        "provisioning.c"
        "button_report.c"
        "net_rest.c"
        "rest_config.c"
        "image_fetcher.c"
        "image_decoder.c"
        "ota_verify.c"
        "ota_manifest.c"
        "ota_install.c"
        "ota_boot.c"
        "ota_report.c"
        "overlay.c"
        "overlay_run.c"
        "deck.c"
        "deck_digest.c"
        "deck_cache.c"
        "deck_run.c"
        "sdcard.c"
        "splash.c"
        "vendor/qrcodegen.c"
    INCLUDE_DIRS
        "."
        "panel"
        "../boards"
        "../include"
    REQUIRES
        driver
        app_update
        esp_adc
        esp_driver_i2c
        esp_driver_usb_serial_jtag
        esp_event
        esp_http_client
        esp_http_server
        esp_netif
        esp_timer
        esp_wifi
        esp-tls
        fatfs
        json
        nvs_flash
        mbedtls
        lwip
        mdns
)
